OBJ Export crash #117510

Closed
opened 2024-01-25 16:14:48 +01:00 by Dalai Felinto · 1 comment

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-25 10:45, hash: 5ed2eea0f6fc
Worked: 4.0

Short description of error
Crash when exporting the archiviz demo file.

Exact steps for others to reproduce the error

Boom

BLI_assert failed: source/blender/blenlib/BLI_span.hh:246, operator, at 'index < size_'

Full backtrace /lib/x86_64-linux-gnu/libc.so.6(+0x126850) [0x7fffe7126850] BLI_assert failed: source/blender/blenlib/BLI_span.hh:246, operator[](), at 'index < size_'

Thread 47 "blender" received signal SIGABRT, Aborted.
[Switching to Thread 0x7fff877fe600 (LWP 542867)]
__pthread_kill_implementation (no_tid=0, signo=6, threadid=140735466694144) at ./nptl/pthread_kill.c:44
44 ./nptl/pthread_kill.c: No such file or directory.
(gdb) bt
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=140735466694144) at ./nptl/pthread_kill.c:44
#1 __pthread_kill_internal (signo=6, threadid=140735466694144) at ./nptl/pthread_kill.c:78
#2 __GI___pthread_kill (threadid=140735466694144, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
#3 0x00007fffe7042476 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#4 0x00007fffe70287f3 in __GI_abort () at ./stdlib/abort.c:79
#5 0x0000000001412a0c in _BLI_assert_abort () at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/intern/BLI_assert.c:48
#6 0x00000000007b572d in blender::Span<blender::VecBase<float, 3> >::operator[] (this=0x7fff877b7ac0, index=0) at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/BLI_span.hh:246
#7 0x000000000350bf33 in blender::io::obj::OBJMesh::store_normal_coords_and_indices (this=0x7fff3f6bea00) at /media/data/blender_dfelinto/blender_src/source/blender/io/wavefront_obj/exporter/obj_export_mesh.cc:373
#8 0x00000000034ea0db in operator() (__closure=0x7fffffffb790, range=...) at /media/data/blender_dfelinto/blender_src/source/blender/io/wavefront_obj/exporter/obj_exporter.cc:170
#9 0x00000000034eb63a in blender::FunctionRef<void(blender::IndexRange)>::callback_fn<const blender::io::obj::write_mesh_objects(blender::Vector<std::unique_ptrblender::io::obj::OBJMesh >, blender::io::obj::OBJWriter&, blender::io::obj::MTLWriter*, const OBJExportParams&)::<lambda(blender::IndexRange)> >(intptr_t, blender::IndexRange) (callable=140737488336784, params#0=...) at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/BLI_function_ref.hh:96
#10 0x0000000001578ce4 in blender::FunctionRef<void (blender::IndexRange)>::operator()(blender::IndexRange) const (this=0x7fff764ec9e0, params#0=...) at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/BLI_function_ref.hh:132
#11 0x0000000001577baa in operator() (__closure=0x7fff764ec9e0, subrange=...) at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/intern/task_range.cc:174
#12 0x00000000015784d5 in tbb::interface9::internal::start_for<tbb::blocked_range, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range&)>, const tbb::auto_partitioner>::run_body(tbb::blocked_range &) (this=0x7fff764ec9c0, r=...) at /media/data/blender_dfelinto/lib/linux_x86_64_glibc_228/tbb/include/tbb/parallel_for.h:115
#13 0x00000000015781f8 in tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_modetbb::interface9::internal::auto_partition_type >::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range&)>, const tbb::auto_partitioner>, tbb::blocked_range >(tbb::interface9::internal::start_for<tbb::blocked_range, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range&)>, const tbb::auto_partitioner> &, tbb::blocked_range &) (this=0x7fff764ec9f0, start=warning: RTTI symbol not found for class 'tbb::interface9::internal::start_for<tbb::blocked_range, blender::threading::detail::parallel_for_impl(blender::IndexRange, long, blender::FunctionRef<void (blender::IndexRange)>)::{lambda(tbb::blocked_range const&)#1}, tbb::auto_partitioner const>'
...,
range=...) at /media/data/blender_dfelinto/lib/linux_x86_64_glibc_228/tbb/include/tbb/partitioner.h:423
#14 0x00000000015780d4 in tbb::interface9::internal::partition_type_basetbb::interface9::internal::auto_partition_type::execute<tbb::interface9::internal::start_for<tbb::blocked_range, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range&)>, const tbb::auto_partitioner>, tbb::blocked_range >(tbb::interface9::internal::start_for<tbb::blocked_range, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range&)>, const tbb::auto_partitioner> &, tbb::blocked_range &) (this=0x7fff764ec9f0, start=warning: RTTI symbol not found for class 'tbb::interface9::internal::start_for<tbb::blocked_range, blender::threading::detail::parallel_for_impl(blender::IndexRange, long, blender::FunctionRef<void (blender::IndexRange)>)::{lambda(tbb::blocked_range const&)#1}, tbb::auto_partitioner const>'
..., range=...)
at /media/data/blender_dfelinto/lib/linux_x86_64_glibc_228/tbb/include/tbb/partitioner.h:256
#15 0x0000000001577fd0 in tbb::interface9::internal::start_for<tbb::blocked_range, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range&)>, const tbb::auto_partitioner>::execute(void) (this=0x7fff764ec9c0) at /media/data/blender_dfelinto/lib/linux_x86_64_glibc_228/tbb/include/tbb/parallel_for.h:142
#16 0x00007ffff7f9bb45 in tbb::internal::custom_schedulertbb::internal::IntelSchedulerTraits::process_bypass_loop(tbb::internal::context_guard_helper&, tbb::task*, long) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2
#17 0x00007ffff7f9be78 in tbb::internal::custom_schedulertbb::internal::IntelSchedulerTraits::local_wait_for_all(tbb::task&, tbb::task*) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2
#18 0x00007ffff7f84757 in tbb::internal::arena::process(tbb::internal::generic_scheduler&) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2
#19 0x00007ffff7f92ac0 in tbb::internal::market::process(rml::job&) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2
#20 0x00007ffff7f9659c in tbb::internal::rml::private_worker::run() () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2
#21 0x00007ffff7f967d9 in tbb::internal::rml::private_worker::thread_routine(void*) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2
#22 0x00007fffe7094ac3 in start_thread (arg=) at ./nptl/pthread_create.c:442
#23 0x00007fffe7126850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
(gdb)
[0] 1:python 2:bash- 3:gdb* "ws-dalai" 16:14 25-jan-24

**Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-25 10:45, hash: `5ed2eea0f6fc` Worked: 4.0 **Short description of error** Crash when exporting the archiviz demo file. **Exact steps for others to reproduce the error** * Open https://download.blender.org/demo/eevee/archiviz/archiviz.blend * Export as OBJ Boom BLI_assert failed: source/blender/blenlib/BLI_span.hh:246, operator[](), at 'index < size_' <details> <summary>Full backtrace</summary> /lib/x86_64-linux-gnu/libc.so.6(+0x126850) [0x7fffe7126850] BLI_assert failed: source/blender/blenlib/BLI_span.hh:246, operator[](), at 'index < size_' Thread 47 "blender" received signal SIGABRT, Aborted. [Switching to Thread 0x7fff877fe600 (LWP 542867)] __pthread_kill_implementation (no_tid=0, signo=6, threadid=140735466694144) at ./nptl/pthread_kill.c:44 44 ./nptl/pthread_kill.c: No such file or directory. (gdb) bt #0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=140735466694144) at ./nptl/pthread_kill.c:44 #1 __pthread_kill_internal (signo=6, threadid=140735466694144) at ./nptl/pthread_kill.c:78 #2 __GI___pthread_kill (threadid=140735466694144, signo=signo@entry=6) at ./nptl/pthread_kill.c:89 #3 0x00007fffe7042476 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26 #4 0x00007fffe70287f3 in __GI_abort () at ./stdlib/abort.c:79 #5 0x0000000001412a0c in _BLI_assert_abort () at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/intern/BLI_assert.c:48 #6 0x00000000007b572d in blender::Span<blender::VecBase<float, 3> >::operator[] (this=0x7fff877b7ac0, index=0) at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/BLI_span.hh:246 #7 0x000000000350bf33 in blender::io::obj::OBJMesh::store_normal_coords_and_indices (this=0x7fff3f6bea00) at /media/data/blender_dfelinto/blender_src/source/blender/io/wavefront_obj/exporter/obj_export_mesh.cc:373 #8 0x00000000034ea0db in operator() (__closure=0x7fffffffb790, range=...) at /media/data/blender_dfelinto/blender_src/source/blender/io/wavefront_obj/exporter/obj_exporter.cc:170 #9 0x00000000034eb63a in blender::FunctionRef<void(blender::IndexRange)>::callback_fn<const blender::io::obj::write_mesh_objects(blender::Vector<std::unique_ptr<blender::io::obj::OBJMesh> >, blender::io::obj::OBJWriter&, blender::io::obj::MTLWriter*, const OBJExportParams&)::<lambda(blender::IndexRange)> >(intptr_t, blender::IndexRange) (callable=140737488336784, params#0=...) at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/BLI_function_ref.hh:96 #10 0x0000000001578ce4 in blender::FunctionRef<void (blender::IndexRange)>::operator()(blender::IndexRange) const (this=0x7fff764ec9e0, params#0=...) at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/BLI_function_ref.hh:132 #11 0x0000000001577baa in operator() (__closure=0x7fff764ec9e0, subrange=...) at /media/data/blender_dfelinto/blender_src/source/blender/blenlib/intern/task_range.cc:174 #12 0x00000000015784d5 in tbb::interface9::internal::start_for<tbb::blocked_range<long int>, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range<long int>&)>, const tbb::auto_partitioner>::run_body(tbb::blocked_range<long> &) (this=0x7fff764ec9c0, r=...) at /media/data/blender_dfelinto/lib/linux_x86_64_glibc_228/tbb/include/tbb/parallel_for.h:115 #13 0x00000000015781f8 in tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type> >::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range<long int>, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range<long int>&)>, const tbb::auto_partitioner>, tbb::blocked_range<long int> >(tbb::interface9::internal::start_for<tbb::blocked_range<long int>, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range<long int>&)>, const tbb::auto_partitioner> &, tbb::blocked_range<long> &) (this=0x7fff764ec9f0, start=warning: RTTI symbol not found for class 'tbb::interface9::internal::start_for<tbb::blocked_range<long>, blender::threading::detail::parallel_for_impl(blender::IndexRange, long, blender::FunctionRef<void (blender::IndexRange)>)::{lambda(tbb::blocked_range<long> const&)#1}, tbb::auto_partitioner const>' ..., range=...) at /media/data/blender_dfelinto/lib/linux_x86_64_glibc_228/tbb/include/tbb/partitioner.h:423 #14 0x00000000015780d4 in tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type>::execute<tbb::interface9::internal::start_for<tbb::blocked_range<long int>, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range<long int>&)>, const tbb::auto_partitioner>, tbb::blocked_range<long int> >(tbb::interface9::internal::start_for<tbb::blocked_range<long int>, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range<long int>&)>, const tbb::auto_partitioner> &, tbb::blocked_range<long> &) (this=0x7fff764ec9f0, start=warning: RTTI symbol not found for class 'tbb::interface9::internal::start_for<tbb::blocked_range<long>, blender::threading::detail::parallel_for_impl(blender::IndexRange, long, blender::FunctionRef<void (blender::IndexRange)>)::{lambda(tbb::blocked_range<long> const&)#1}, tbb::auto_partitioner const>' ..., range=...) at /media/data/blender_dfelinto/lib/linux_x86_64_glibc_228/tbb/include/tbb/partitioner.h:256 #15 0x0000000001577fd0 in tbb::interface9::internal::start_for<tbb::blocked_range<long int>, blender::threading::detail::parallel_for_impl(blender::IndexRange, int64_t, blender::FunctionRef<void(blender::IndexRange)>)::<lambda(const tbb::blocked_range<long int>&)>, const tbb::auto_partitioner>::execute(void) (this=0x7fff764ec9c0) at /media/data/blender_dfelinto/lib/linux_x86_64_glibc_228/tbb/include/tbb/parallel_for.h:142 #16 0x00007ffff7f9bb45 in tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2 #17 0x00007ffff7f9be78 in tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2 #18 0x00007ffff7f84757 in tbb::internal::arena::process(tbb::internal::generic_scheduler&) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2 #19 0x00007ffff7f92ac0 in tbb::internal::market::process(rml::job&) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2 #20 0x00007ffff7f9659c in tbb::internal::rml::private_worker::run() () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2 #21 0x00007ffff7f967d9 in tbb::internal::rml::private_worker::thread_routine(void*) () from /media/data/blender_dfelinto/main_debug/bin/lib/libtbb.so.2 #22 0x00007fffe7094ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442 #23 0x00007fffe7126850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81 (gdb) [0] 1:python 2:bash- 3:gdb* "ws-dalai" 16:14 25-jan-24 </details>
Dalai Felinto added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-25 16:14:49 +01:00
Iliya Katushenock added the
Interest
Pipeline, Assets & IO
label 2024-01-25 16:15:51 +01:00
Hans Goudey added
Status
Confirmed
Priority
High
Type
Bug
and removed
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-01-25 21:10:39 +01:00
Hans Goudey self-assigned this 2024-01-25 21:10:43 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-26 18:55:13 +01:00
Author
Owner

Thanks @HooglyBoogly !

Thanks @HooglyBoogly !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117510
No description provided.