source/blender/io/wavefront_obj/exporter/obj_export_file_writer.cc
@@ -360,7 +360,7 @@ void OBJWriter::write_poly_elements(FormatHandler &fh,
 
     Span<int> poly_vertex_indices = obj_mesh_data.calc_poly_vertex_indices(i);
     Span<int> poly_uv_indices = obj_mesh_data.calc_poly_uv_indices(i);
-    Vector<int> poly_normal_indices = obj_mesh_data.calc_poly_normal_indices(i);
+    Span<int> poly_normal_indices = obj_mesh_data.calc_poly_normal_indices(i);
 
     /* Write smoothing group if different from previous. */
     {
